@@ -4,3 +4,5 @@ MANIFEST
 testhds.sdf
 t/copobj.t
 t/delobj.t
+t/wrapper.t
+t/creobj.t
